--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,21 @@
 
     <properties>
         <java.version>21</java.version>
+        <junit.version>6.0.2</junit.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <!--Dependencia do junit, essa dependencia é o aggregator ela encapsula tanto o API, engine e o params -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
